# notif

./: README.md  pyproject.toml
infra/: main.tf
notif/: lambda_function.py
