[tool.poetry]
name = "notif"
version = "0.1.0"
description = ""
authors = ["João Tedeschi <joaorafaelbt@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
pandas = "^2.2.2"
boto3 = "^1.35.19"
duckdb = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
